# muphys

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  SUMMARY.md  main.cpp
cmake/: FindNetCDF.cmake
core/common/: graupel.hpp  types.hpp  utils.cpp  utils.hpp
core/properties/: fall_speed.hpp
implementations/: CMakeLists.txt
implementations/gpu/: CMakeLists.txt  graupel.cpp
implementations/openmp/: graupel.cpp
implementations/sequential/: graupel.cpp
io/: CMakeLists.txt  io.cpp  io.hpp
reference_results/: install.sh  sequential_double_20k.nc  sequential_single_20k.nc
scripts/: benchmark.sh  build-cpu.sh  build-gpu.sh  cdo.sh  diffn-cpu.sh  diffn-gpu.sh  levante-cpu.sbatch  levante-gpu.sbatch  levante-setup.sh  my-build.sh  my-run.sh  ncu.sh  nsys.sh  sanity-check.sh
tasks/: 20k.nc  install.sh
test/: common.cc  io.cc
tools/: benchmark.sh  my-build-debug.sh  my-run-debug.sh  sanity-check.sh
